--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -60,6 +60,9 @@
             "path": "./pnpjs"
         },
         {
+            "path": "./project"
+        },
+        {
             "path": "./sp"
         },
         {
